[gd_scene load_steps=7 format=3 uid="uid://bcdyakc3nj3ki"]

[ext_resource type="PackedScene" uid="uid://cxfocs43fno6m" path="res://scenes/Agent.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bhlq28x3qj475" path="res://scenes/Stations/CrateTomate.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bpe3rbfj1llv5" path="res://scenes/Stations/CuttingBoard.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bj6g16jvq80xq" path="res://scenes/Stations/DropCounter.tscn" id="4"]
[ext_resource type="Script" uid="uid://dwc67aoda424m" path="res://scripts/world/Main.gd" id="5"]

[sub_resource type="NavigationPolygon" id="1"]
vertices = PackedVector2Array(630, 118, -502, 118, -502, -502, 630, -502)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-512, -512, 640, -512, 640, 128, -512, 128)])

[node name="Main" type="Node2D"]
script = ExtResource("5")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(512, 512)
navigation_polygon = SubResource("1")

[node name="Agent" parent="." instance=ExtResource("1")]
position = Vector2(536, 368)

[node name="CrateTomate" parent="." instance=ExtResource("2")]
position = Vector2(64, 256)

[node name="CuttingBoard" parent="." instance=ExtResource("3")]
position = Vector2(512, 64)

[node name="DropCounter" parent="." instance=ExtResource("4")]
position = Vector2(1024, 320)

[node name="UI" type="CanvasLayer" parent="."]

[node name="StateLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 39.0
text = "Init..."

[node name="RestartButton" type="Button" parent="UI"]
offset_left = 1024.0
offset_top = 24.0
offset_right = 1089.0
offset_bottom = 55.0
text = "Restart"
